Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Apellido_Referido__c.field-meta.xml
<CustomField>
    <fullName>CI_Apellido_Referido__c</fullName>
    <label>Apellido del Referido</label>
    <length>50</length>
    <type>Text</type>
</CustomField>