Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Asignado__c.field-meta.xml
<CustomField>
    <fullName>CI_Asignado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Esta Asignado?</label>
    <type>Checkbox</type>
</CustomField>