Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Cod_Modelo__c.field-meta.xml
<CustomField>
    <fullName>CI_Cod_Modelo__c</fullName>
    <label>Código del Modelo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>