Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Cod_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>CI_Cod_Proyecto__c</fullName>
    <label>Proyecto Pardot</label>
    <length>50</length>
    <type>Text</type>
</CustomField>