Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Convertido_Lead__c.field-meta.xml
<CustomField>
    <fullName>CI_Convertido_Lead__c</fullName>
    <defaultValue>&quot;Si&quot;</defaultValue>
    <label>Convertido desde Lead</label>
    <length>5</length>
    <type>Text</type>
</CustomField>