Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Correo_Validado__c.field-meta.xml
<CustomField>
    <fullName>CI_Correo_Validado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Correo Validado?</label>
    <type>Checkbox</type>
</CustomField>