Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Dias_sin_gestionar__c.field-meta.xml
<CustomField>
    <fullName>CI_Dias_sin_gestionar__c</fullName>
    <formula>DATETIMEVALUE( TODAY() ) - DATETIMEVALUE( CI_Fecha_ultima_gestion__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días sin gestionar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>