Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>CI_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bandera para indicar que el Prospecto está duplicado.</description>
    <inlineHelpText>Bandera para indicar que el Prospecto está duplicado.</inlineHelpText>
    <label>¿Es duplicado?</label>
    <type>Checkbox</type>
</CustomField>