Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Email__c.field-meta.xml
<CustomField>
    <fullName>CI_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>