Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Email_Referido__c.field-meta.xml
<CustomField>
    <fullName>CI_Email_Referido__c</fullName>
    <label>Email del Referido</label>
    <type>Email</type>
</CustomField>