Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Estado_Civil__c.field-meta.xml
<CustomField>
    <fullName>CI_Estado_Civil__c</fullName>
    <label>Estado Civil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <label>CASADO</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>SOLTERO</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>DIVORCIADO</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>VIUDO</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>UNIÓN LIBRE</label>
            </value>
            <value>
                <fullName>B</fullName>
                <isActive>false</isActive>
                <label>CASADO SEPARACIÓN BIENES</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>