Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Fecha_de_asignacion__c.field-meta.xml
<CustomField>
    <fullName>CI_Fecha_de_asignacion__c</fullName>
    <description>Campo que controla la fecha en que se asigna y reasigna un propietario al Prospecto.</description>
    <inlineHelpText>Campo que controla la fecha en que se asigna y reasigna un propietario al Prospecto.</inlineHelpText>
    <label>Fecha de asignación</label>
    <type>Date</type>
</CustomField>