Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Fecha_de_conversion__c.field-meta.xml
<CustomField>
    <fullName>CI_Fecha_de_conversion__c</fullName>
    <description>Fecha/hora en que el prospecto se convirtió a Cuenta.</description>
    <inlineHelpText>Fecha/hora en que el prospecto se convirtió a Cuenta.</inlineHelpText>
    <label>Fecha de conversión</label>
    <type>DateTime</type>
</CustomField>