Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Fecha_Nacimiento_C__c.field-meta.xml
<CustomField>
    <fullName>CI_Fecha_Nacimiento_C__c</fullName>
    <label>Fecha de Nacimiento del Cónyuge</label>
    <type>Date</type>
</CustomField>