Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Fecha_ultima_gestion__c.field-meta.xml
<CustomField>
    <fullName>CI_Fecha_ultima_gestion__c</fullName>
    <description>Campo para controlar cuando se realizó la última gestión en el prospecto.</description>
    <inlineHelpText>Campo para controlar cuando se realizó la última gestión en el prospecto.</inlineHelpText>
    <label>Fecha de la última gestión</label>
    <type>Date</type>
</CustomField>