Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Formulario__c.field-meta.xml
<CustomField>
    <fullName>CI_Formulario__c</fullName>
    <label>Formulario</label>
    <length>100</length>
    <type>Text</type>
</CustomField>