Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Gestor__c.field-meta.xml
<CustomField>
    <fullName>CI_Gestor__c</fullName>
    <formula>Owner:User.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gestor</label>
    <type>Text</type>
</CustomField>