Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Horario__c.field-meta.xml
<CustomField>
    <fullName>CI_Horario__c</fullName>
    <defaultValue>&apos;MAÑANA&apos;</defaultValue>
    <label>Horario para Contactar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MAÑANA</fullName>
                <default>true</default>
                <label>MAÑANA</label>
            </value>
            <value>
                <fullName>TARDE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>