Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Horario_de_Contacto__c.field-meta.xml
<CustomField>
    <fullName>CI_Horario_de_Contacto__c</fullName>
    <label>Horario de Contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9h00</fullName>
            </value>
            <value>
                <fullName>9h30</fullName>
            </value>
            <value>
                <fullName>10h00</fullName>
            </value>
            <value>
                <fullName>10h30</fullName>
            </value>
            <value>
                <fullName>11h00</fullName>
            </value>
            <value>
                <fullName>11h30</fullName>
            </value>
            <value>
                <fullName>12h00</fullName>
            </value>
            <value>
                <fullName>12h30</fullName>
            </value>
            <value>
                <fullName>13h00</fullName>
            </value>
            <value>
                <fullName>13h30</fullName>
            </value>
            <value>
                <fullName>14h00</fullName>
            </value>
            <value>
                <fullName>14h30</fullName>
            </value>
            <value>
                <fullName>15h00</fullName>
            </value>
            <value>
                <fullName>15h30</fullName>
            </value>
            <value>
                <fullName>16h00</fullName>
            </value>
            <value>
                <fullName>16h30</fullName>
            </value>
            <value>
                <fullName>17h00</fullName>
            </value>
            <value>
                <fullName>17h30</fullName>
            </value>
            <value>
                <fullName>--Ninguno--</fullName>
                <isActive>false</isActive>
                <label>--Ninguno--</label>
            </value>
            <value>
                <fullName>Horario de Contacto</fullName>
                <isActive>false</isActive>
                <label>Horario de Contacto</label>
            </value>
            <value>
                <fullName>Selecciona una fecha</fullName>
                <isActive>false</isActive>
                <label>Selecciona una fecha</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>