Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Identificacion_C__c.field-meta.xml
<CustomField>
    <fullName>CI_Identificacion_C__c</fullName>
    <label>Identificación Cónyuge</label>
    <length>50</length>
    <type>Text</type>
</CustomField>