Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Lista_Usuarios__c.field-meta.xml
<CustomField>
    <fullName>CI_Lista_Usuarios__c</fullName>
    <label>Lista de Usuarios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Xiomara Pérez</fullName>
            </value>
            <value>
                <fullName>Eder Sánchez</fullName>
            </value>
            <value>
                <fullName>Gabriela Lindao</fullName>
            </value>
            <value>
                <fullName>Jefferson Cedeño</fullName>
            </value>
            <value>
                <fullName>Antonio Ávila</fullName>
            </value>
            <value>
                <fullName>Joffre Castillo</fullName>
            </value>
            <value>
                <fullName>Freddy Macías</fullName>
            </value>
            <value>
                <fullName>Jorge Aguilar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>