Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Lugar_Nacimiento_C__c.field-meta.xml
<CustomField>
    <fullName>CI_Lugar_Nacimiento_C__c</fullName>
    <label>Lugar de Nacimiento del Cónyuge</label>
    <length>100</length>
    <type>Text</type>
</CustomField>