Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Motivo_Baja__c.field-meta.xml
<CustomField>
    <fullName>CI_Motivo_Baja__c</fullName>
    <description>Motivo por el cual se da de baja al candidato.</description>
    <inlineHelpText>Motivo por el cual se da de baja al candidato.</inlineHelpText>
    <label>Motivo de Baja</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PERFIL FALSO</fullName>
            </value>
            <value>
                <fullName>ATENDIDO POR OTRO ASESOR</fullName>
            </value>
            <value>
                <fullName>CONFUSIÓN MARCA Y UBICACIÓN</fullName>
            </value>
            <value>
                <fullName>TELÉFONO CORRECTO, EMAIL SIN RESPUESTA</fullName>
            </value>
            <value>
                <fullName>TELÉFONO INCORRECTO, EMAIL SIN RESPUESTA</fullName>
            </value>
            <value>
                <fullName>SÓLO DEJÓ EMAIL SIN RESPUESTA</fullName>
            </value>
            <value>
                <fullName>SÓLO DEJÓ TELÉFONO SIN RESPUESTA</fullName>
            </value>
            <value>
                <fullName>CLIENTE SIN PRESUPUESTO</fullName>
            </value>
            <value>
                <fullName>CLIENTE NO ES PERFIL CREDITICIO</fullName>
            </value>
            <value>
                <fullName>SIN INTERÉS DE COMPRA</fullName>
            </value>
            <value>
                <fullName>CLIENTE COMPRÓ OTRO BIEN INMUEBLE</fullName>
            </value>
            <value>
                <fullName>CLIENTE YA EXISTE EN EL PROYECTO</fullName>
            </value>
            <value>
                <fullName>VENTA CERRADA</fullName>
            </value>
            <value>
                <fullName>PERFIL INGRESADO MANUALMENTE</fullName>
            </value>
            <value>
                <fullName>CLIENTE NO GUSTÓ DEL PROYECTO</fullName>
            </value>
            <value>
                <fullName>PROCESO AUTOMÁTICO</fullName>
            </value>
            <value>
                <fullName>PENITENCIARIA</fullName>
            </value>
            <value>
                <fullName>PLAZO 90 DIAS</fullName>
                <label>PLAZO 90 DÍAS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>