Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Mov_Referido__c.field-meta.xml
<CustomField>
    <fullName>CI_Mov_Referido__c</fullName>
    <label>Móvil del Referido</label>
    <type>Phone</type>
</CustomField>