Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Movil__c.field-meta.xml
<CustomField>
    <fullName>CI_Movil__c</fullName>
    <label>Móvil</label>
    <type>Phone</type>
</CustomField>