Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Mts_Cuadrados__c.field-meta.xml
<CustomField>
    <fullName>CI_Mts_Cuadrados__c</fullName>
    <description>Metros cuadrados del modelo solicitado.</description>
    <formula>CI_Modelo__r.CI_Area_Terreno__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Metros cuadrados del modelo solicitado.</inlineHelpText>
    <label>Metros Cuadrados</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>