Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Nacionalidad_C__c.field-meta.xml
<CustomField>
    <fullName>CI_Nacionalidad_C__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nacionalidad del Cónyuge</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Candidatos (Nacionalidad del Cónyuge)</relationshipLabel>
    <relationshipName>Nacionalidad_de_Conyuge</relationshipName>
    <type>Lookup</type>
</CustomField>