Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Nombre_C__c.field-meta.xml
<CustomField>
    <fullName>CI_Nombre_C__c</fullName>
    <label>Nombre del Cónyuge</label>
    <length>100</length>
    <type>Text</type>
</CustomField>