Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Nombre_Referido__c.field-meta.xml
<CustomField>
    <fullName>CI_Nombre_Referido__c</fullName>
    <label>Nombre del Referido</label>
    <length>50</length>
    <type>Text</type>
</CustomField>