Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Notificar_PI__c.field-meta.xml
<CustomField>
    <fullName>CI_Notificar_PI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notificar Prospecto Inactivo</label>
    <type>Checkbox</type>
</CustomField>