Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Nuevo_Propietario__c.field-meta.xml
<CustomField>
    <fullName>CI_Nuevo_Propietario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nuevo Propietario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Candidatos</relationshipName>
    <type>Lookup</type>
</CustomField>