Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Numero_asigna__c.field-meta.xml
<CustomField>
    <fullName>CI_Numero_asigna__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Número de veces asignado y reasignado a diversos propietarios.</description>
    <inlineHelpText>Número de veces asignado y reasignado a diversos propietarios.</inlineHelpText>
    <label>Número de asignaciones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>