Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Perfil_Gestor__c.field-meta.xml
<CustomField>
    <fullName>CI_Perfil_Gestor__c</fullName>
    <formula>Owner:User.Manager.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perfil gestor</label>
    <type>Text</type>
</CustomField>