Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Personeria__c.field-meta.xml
<CustomField>
    <fullName>CI_Personeria__c</fullName>
    <label>Tipo de Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>NATURAL</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>JURÍDICA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>