Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Prof_Conyuge__c.field-meta.xml
<CustomField>
    <fullName>CI_Prof_Conyuge__c</fullName>
    <label>Profesión Cónyuge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AB</fullName>
                <label>ABOGADO</label>
            </value>
            <value>
                <fullName>ADM</fullName>
                <label>ADMINISTRADOR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>