Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Proyecto_User__c.field-meta.xml
<CustomField>
    <fullName>CI_Proyecto_User__c</fullName>
    <formula>Owner:User.CI_Nombre_Funcion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proyecto</label>
    <type>Text</type>
</CustomField>