Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Reasigment__c.field-meta.xml
<CustomField>
    <fullName>CI_Reasigment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>campo utilizado como bandera para la reasignacion de leads</description>
    <label>Reasginacion</label>
    <type>Checkbox</type>
</CustomField>