Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Ref_Web_To_Lead__c.field-meta.xml
<CustomField>
    <fullName>CI_Ref_Web_To_Lead__c</fullName>
    <label>¿Referido Web To Lead?</label>
    <length>2</length>
    <type>Text</type>
</CustomField>