Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Referido__c.field-meta.xml
<CustomField>
    <fullName>CI_Referido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referente</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Candidatos</relationshipLabel>
    <relationshipName>Referidos</relationshipName>
    <type>Lookup</type>
</CustomField>