Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Reside__c.field-meta.xml
<CustomField>
    <fullName>CI_Reside__c</fullName>
    <label>Reside</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXTRANJERO</fullName>
            </value>
            <value>
                <fullName>NACIONAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>