Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Sexo__c.field-meta.xml
<CustomField>
    <fullName>CI_Sexo__c</fullName>
    <label>Sexo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
                <label>MASCULINO</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>FEMENINO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>