Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_SLA__c.field-meta.xml
<CustomField>
    <fullName>CI_SLA__c</fullName>
    <description>Días transcurridos desde que se creó el Prospecto.</description>
    <formula>IF(
    NOT(ISPICKVAL(Status, &apos;Qualified&apos;)),
    If(
        ISBLANK(CI_Fecha_de_asignacion__c),
        NOW()-CreatedDate,
        TODAY()- CI_Fecha_de_asignacion__c
    ),
    CI_Fecha_de_conversion__c-CreatedDate
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Días transcurridos desde que se creó el Prospecto.</inlineHelpText>
    <label>SLA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>