Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Tipo_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CI_Tipo_de_Cliente__c</fullName>
    <label>Tipo de Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospecto Potencial</fullName>
                <default>true</default>
                <label>Prospecto Potencial</label>
            </value>
            <value>
                <fullName>Cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>