Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Tipo_Iden__c.field-meta.xml
<CustomField>
    <fullName>CI_Tipo_Iden__c</fullName>
    <label>Tipo de Identificación</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>RUC</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>CÉDULA</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>PASAPORTE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>