Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CI_Web_to_Lead__c.field-meta.xml
<CustomField>
    <fullName>CI_Web_to_Lead__c</fullName>
    <description>Bandera para saber si viene desde formulario Web to Lead.</description>
    <inlineHelpText>Bandera para saber si viene desde formulario Web to Lead.</inlineHelpText>
    <label>¿Viene de Pardot?</label>
    <length>2</length>
    <type>Text</type>
</CustomField>