Inmob-Salesforce/force-app/main/default/objects/Lead/fields/Cod_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Cod_Proyecto__c</fullName>
    <formula>CI_Proyecto__r.Codigo_Proyecto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cod. Proyecto</label>
    <type>Text</type>
</CustomField>