Inmob-Salesforce/force-app/main/default/objects/Lead/fields/CuentaId__c.field-meta.xml
<CustomField>
    <fullName>CuentaId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CuentaId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prospectos</relationshipLabel>
    <relationshipName>Prospectos</relationshipName>
    <type>Lookup</type>
</CustomField>