Inmob-Salesforce/force-app/main/default/objects/Lead/fields/EsWeb__c.field-meta.xml
<CustomField>
    <fullName>EsWeb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EsWeb</label>
    <type>Checkbox</type>
</CustomField>