Inmob-Salesforce/force-app/main/default/objects/Lead/fields/Fecha_Reasignacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Reasignacion__c</fullName>
    <label>Fecha Reasignacion</label>
    <type>DateTime</type>
</CustomField>