Inmob-Salesforce/force-app/main/default/objects/Lead/fields/Modelo_Formula__c.field-meta.xml
<CustomField>
    <fullName>Modelo_Formula__c</fullName>
    <formula>IF(CI_Modelo__r.CI_Codigo_Proyecto__c =  CI_Proyecto__r.Codigo_Proyecto__c  ,  CI_Modelo__r.Name , &apos;&apos;)</formula>
    <label>Modelo Formula</label>
    <type>Text</type>
</CustomField>