Inmob-Salesforce/force-app/main/default/objects/Lead/fields/Proyecto_Lista__c.field-meta.xml
<CustomField>
    <fullName>Proyecto_Lista__c</fullName>
    <label>Proyecto Lista</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VILLA ITALIA</fullName>
            </value>
            <value>
                <fullName>LA RIOJA</fullName>
            </value>
            <value>
                <fullName>LA GRAN VITTORIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>