Inmob-Salesforce/force-app/main/default/objects/Lead/recordTypes/CI_Prospecto_principal.recordType-meta.xml
<RecordType>
    <fullName>CI_Prospecto_principal</fullName>
    <active>true</active>
    <businessProcess>CI_Desktop</businessProcess>
    <label>Prospecto principal</label>
</RecordType>