Inmob-Salesforce/force-app/main/default/objects/Lead/recordTypes/CI_Prospecto_referido.recordType-meta.xml
<RecordType>
    <fullName>CI_Prospecto_referido</fullName>
    <active>true</active>
    <businessProcess>CI_Desktop</businessProcess>
    <label>Prospecto referido</label>
</RecordType>