Inmob-Salesforce/force-app/main/default/objects/Lead/validationRules/CI_Cambiar_Propietario.validationRule-meta.xml
<ValidationRule>
    <fullName>CI_Cambiar_Propietario</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
ISCHANGED( OwnerId ), 
$Profile.Name == &quot;Asesor de Ventas&quot;
)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Un Asesor no puede cambiar el propietario del Prospecto.</errorMessage>
</ValidationRule>