Inmob-Salesforce/force-app/main/default/objects/Lead/validationRules/CI_Cambiar_Propietario2.validationRule-meta.xml
<ValidationRule>
    <fullName>CI_Cambiar_Propietario2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(Status),&quot;Working&quot;),
$Profile.Name == &quot;Asesor de Ventas&quot;,
ISCHANGED(OwnerId),
AND (
Owner:User.Profile.Name &lt;&gt; &quot;Jefe de Ventas&quot;)
)</errorConditionFormula>
    <errorMessage>Un Asesor no puede cambiar el propietario del Prospecto.</errorMessage>
</ValidationRule>