Inmob-Salesforce/force-app/main/default/objects/Lead/validationRules/Validar_Campo_Celular.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Campo_Celular</fullName>
    <active>false</active>
    <errorConditionFormula>AND(  
TEXT( CI_Medio_Contacto__c ) = &quot;CELULAR&quot;,
ISBLANK( CI_Movil__c ),
$Profile.Name != &apos;B2BMA Integration User&apos;,
NOT(ISCHANGED(CI_Fecha_ultima_gestion__c )),
NOT(ISCHANGED(CI_Email__c )),
IsConverted = false  
)</errorConditionFormula>
    <errorDisplayField>CI_Movil__c</errorDisplayField>
    <errorMessage>Campo Requerido, favor completar.</errorMessage>
</ValidationRule>