Inmob-Salesforce/force-app/main/default/objects/Lead/validationRules/Validar_Campo_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Campo_Email</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
NOT( ISBLANK( CI_Web_to_Lead__c ) ), 
ISBLANK( Email ),
NOT(ISCHANGED(CI_Fecha_ultima_gestion__c )) 
)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Campo Requerido, favor completar.</errorMessage>
</ValidationRule>