Inmob-Salesforce/force-app/main/default/objects/Lead/validationRules/Validar_Campo_Horario.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Campo_Horario</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
TEXT( CI_Medio_Contacto__c ) = &quot;CELULAR&quot;, 
NOT( ISBLANK( CI_Web_to_Lead__c ) ), 
ISBLANK( TEXT ( CI_Horario__c ) ),
$Profile.Name != &apos;B2BMA Integration User&apos;,
NOT(ISCHANGED(CI_Fecha_ultima_gestion__c ))  
)</errorConditionFormula>
    <errorDisplayField>CI_Horario__c</errorDisplayField>
    <errorMessage>Campo Requerido, favor completar.</errorMessage>
</ValidationRule>