Inmob-Salesforce/force-app/main/default/objects/Lead/validationRules/Validar_Campo_Identificacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Campo_Identificacion</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
NOT( ISBLANK( CI_Web_to_Lead__c ) ),
ISBLANK( CI_Identificacion__c ),
$Profile.Name != &apos;B2BMA Integration User&apos;,
NOT(ISCHANGED(CI_Fecha_ultima_gestion__c )) 
)</errorConditionFormula>
    <errorDisplayField>CI_Identificacion__c</errorDisplayField>
    <errorMessage>Campo Requerido, favor completar.</errorMessage>
</ValidationRule>