Inmob-Salesforce/force-app/main/default/objects/Lead/validationRules/Validar_Campo_Motivo_Baja.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Campo_Motivo_Baja</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
ISPICKVAL( Status, &quot;Dado de Baja&quot;),
ISBLANK( TEXT ( CI_Motivo_Baja__c ) ),
$Profile.Name != &apos;B2BMA Integration User&apos; 
)</errorConditionFormula>
    <errorDisplayField>CI_Motivo_Baja__c</errorDisplayField>
    <errorMessage>Debe ingresar un motivo de baja</errorMessage>
</ValidationRule>